=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   * support for residue names and identifiers in mol2 files

   * dynamic grid for slice module

   * rank attribute for atoms ( = rank/row from input file)

   * additional safety margins around glReadPixels...

   * cmd.get_color_index

   * passive motion outside of window kills passive menus...

   * faster coulomb_local + menu changes

   * fixed bug with object/selection renaming

   * fixed bug with sequence viewer segment/chain display & spacing

   * slices + associated settings.

   * fixed bug with symexp for when template atoms are outside the
     target cell...

Changes up to 0.97

   * install plugin menu item

   * fixed sequence viewer bug -- GLU now shown as 'E' not 'D'!

   * included Remote PDB loader and APBS plugin

Changes up to 0.96

   * more VDW parameters & updated bond info for DNA/RNA

   * fixed a colossal memory leak in the champ module.

   * aromatic bond display

   * mol2 and multi-mol2 reading capability

   -- beta 16
   * added experimental ability to calculate vacuum electrostatic 
     potentials

   * fixed bugs with map_double, map_new, and color ramping

   -- beta 15

   * annotation wizard (e.g. for SD files -- experimental)

   -- beta 14

   * additional support for weird concatenated PDB files such as those
     output by MOE

   * fixed problem with rendering of discontinuous surfaces

   -- beta13
   
   * get_angle, get_distance commands
 
   * fixed pasting to OpenGL window under X11

   * fixed "Get View" button in MacPyMOL, now also copying
     matrix direct to the clipboard in all versions.  

   * API load actions now run quietly by default, like other functions.

   * pdb_reformat_names_mode = 3 gives IUPAC internally with PDB I/O
     pdb_reformat_names_mode = 1 (PDB) & 2 (Amber/IUPAC), now